--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,41 +2,56 @@
 @tailwind base;
 
 @layer base {
-    button[type="submit"] {
-        @apply p-2 border w-full bg-sky-500 rounded;
-    }
+  button[type="submit"] {
+    @apply p-2  w-full bg-sky-500 rounded;
+  }
 }
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
-    input {
-        @apply w-full p-2 border border-gray-400 rounded;
-    }
-    button {
-        @apply p-2 border w-full bg-sky-500 rounded;
-    }
-    select {
-        @apply w-full p-2 border border-gray-400 rounded;
-    }
-    label {
-        @apply block;
-    }
-    /* ... */
+  input {
+    @apply w-full p-2 border border-gray-400 rounded;
+  }
+  button {
+    @apply py-4 px-8  max-w-lg bg-blue-600 rounded text-xl;
+  }
+  select {
+    @apply w-full p-2 border border-gray-400 rounded;
+  }
+  label {
+    @apply block;
+  }
+  h1 {
+    @apply text-8xl;
+  }
+  h2 {
+    @apply text-6xl;
+  }
+  h3 {
+    @apply text-4xl;
+  }
 }
 
 html,
 body {
-    padding: 0;
-    margin: 0;
-    font-family: "Dosis", sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: "Dosis", sans-serif;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#head-section p {
+  @apply text-slate-400;
+}
+#head-section span {
+  @apply text-[#F6CB60];
 }
