--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");
 @tailwind base;
 
 @layer base {
@@ -23,13 +23,13 @@
     @apply block;
   }
   h1 {
-    @apply text-8xl;
+    @apply text-7xl font-semibold;
   }
   h2 {
-    @apply text-6xl;
+    @apply text-6xl font-semibold;
   }
   h3 {
-    @apply text-4xl;
+    @apply text-4xl font-semibold;
   }
 }
 
@@ -37,7 +37,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Dosis", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 a {
